--- a/Rx.NET/Source/System.Reactive.Linq/project.json
+++ b/Rx.NET/Source/System.Reactive.Linq/project.json
@@ -35,7 +35,7 @@
     "System.Reactive.Core": { "target": "project" },
     "System.Runtime.InteropServices.WindowsRuntime": "4.0.1"
   },
-  
+
   "frameworks": {
     "net45": {
       "buildOptions": {
@@ -89,6 +89,25 @@
           "NO_THREAD",
           "CRIPPLED_REFLECTION",
           "NO_CDS_COLLECTIONS",
+          "USE_TIMER_SELF_ROOT",
+          "PLIB"
+        ]
+      }
+    },
+    "netstandard1.1": {
+      "buildOptions": {
+        "define": [
+          "NO_EVENTARGS_CONSTRAINT",
+          "HAS_EDI",
+          "HAS_WINRT",
+          "HAS_PROGRESS",
+          "PREFER_ASYNC",
+          "HAS_AWAIT",
+          "HAS_APTCA",
+          "NO_REMOTING",
+          "NO_SERIALIZABLE",
+          "NO_THREAD",
+          "CRIPPLED_REFLECTION",
           "USE_TIMER_SELF_ROOT",
           "PLIB"
         ]
