Create symbol packages

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,3 @@
-image: Visual Studio 2015
 init:
   - cmd: set
   
@@ -19,3 +18,5 @@ deploy:
     branch: master  
   api_key:
     secure: sFDl4GgLoro7GqbxyymM6wukuWmHYs1/USAYkhrYQl3NwQRu53Rnz1kJyAk9ux4D
+  symbol_server: https://www.myget.org/F/rxnet/symbols/api/v2/package
+  artifact: .\artifacts\*.nupkg
