Update authors to the .NET Foundation and Contributors

--- a/Ix.NET/Source/NuSpecs/System.Interactive.Providers.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Providers.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>System.Interactive.Providers</id>
     <version>$version$</version>
-    <authors>Microsoft</authors>
+    <authors>.NET Foundation and Contributors</authors>
     <owners>Microsoft</owners>
     <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
     <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
