--- a/Rx.NET/TargetingPacks/Microsoft.TargetingPack.Private.WindowsPhone.v8.1.nuspec
+++ b/Rx.NET/TargetingPacks/Microsoft.TargetingPack.Private.WindowsPhone.v8.1.nuspec
@@ -4,7 +4,7 @@
         <id>Microsoft.TargetingPack.Private.WindowsPhone.v8.1</id>
         <version>1.0.1</version>
         <title>Microsoft.TargetingPack.Private.WindowsPhone.v8.1</title>
-        <authors>Microsoft</authors>
+        <authors>.NET Foundation and Contributors</authors>
         <owners>microsoft,dotnetframework</owners>
         <licenseUrl>http://go.microsoft.com/fwlink/?LinkId=329770</licenseUrl>
         <iconUrl>http://go.microsoft.com/fwlink/?LinkID=288859</iconUrl>
