--- a/Rx.NET/Source/NuSpecs/System.Reactive.Runtime.Remoting.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Runtime.Remoting.nuspec
@@ -5,7 +5,7 @@
     <version>$version$</version>
     <title>Reactive Extensions - .NET Remoting Support</title>
     <authors>.NET Foundation and Contributors</authors>
-    <owners>Microsoft</owners>
+    <owners>Microsoft,RxTeam</owners>
     <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
     <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
     <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
