--- a/Ix.NET/Integration/NetCoreApp/project.json
+++ b/Ix.NET/Integration/NetCoreApp/project.json
@@ -1,15 +1,15 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
-  "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0-rc3-004338"
-    }
-  },
+    "dependencies": {
+        "Microsoft.NETCore.App": {
+            "type": "platform",
+            "version": "1.0.0"
+        }
+    },
 
   "frameworks": {
     "netcoreapp1.0": {
