Install Ix into projects

--- a/Ix.NET/Integration/NetCoreApp/project.json
+++ b/Ix.NET/Integration/NetCoreApp/project.json
@@ -8,7 +8,9 @@
         "Microsoft.NETCore.App": {
             "type": "platform",
             "version": "1.0.0"
-        }
+        },
+        "System.Interactive.Async.Providers": "3.0.0-rc1-00346",
+        "System.Interactive.Providers": "3.0.0-rc1-00346"
     },
 
   "frameworks": {
