--- a/Ix.NET/Integration/NetStandard14/project.json
+++ b/Ix.NET/Integration/NetStandard14/project.json
@@ -1,9 +1,11 @@
 ﻿{
   "version": "1.0.0-*",
 
-  "dependencies": {
-    "NETStandard.Library": "1.6.0"
-  },
+    "dependencies": {
+        "NETStandard.Library": "1.6.0",
+        "System.Interactive.Async.Providers": "3.0.0-rc1-00346",
+        "System.Interactive.Providers": "3.0.0-rc1-00346"
+    },
 
   "frameworks": {
     "netstandard1.4": {
