--- a/Rx.NET/Integration/NetCoreApp/project.json
+++ b/Rx.NET/Integration/NetCoreApp/project.json
@@ -7,13 +7,12 @@
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
-      "version": "1.0.0-rc3-004338"
+      "version": "1.0.0"
     }
   },
 
   "frameworks": {
     "netcoreapp1.0": {
-      "imports": "dnxcore50"
     }
   }
 }
