--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -15,7 +15,7 @@
     <language>en-US</language>
     <tags>Rx Reactive Extensions Observable LINQ Events</tags>
     <dependencies>
-      <group>
+      <group targetFramework="portable-net45+win8+wp8+wpa81">
         <dependency id="System.Reactive" version="$version$" />
       </group>
       <group targetFramework="netstandard1.0">
@@ -64,5 +64,6 @@
   </metadata>
   <files>
     <file src="..\System.Reactive.Providers\bin\$configuration$\**\System.Reactive.Providers.*" exclude="**\*.deps.json" target="lib" />
+    <file src="..\System.Reactive.Providers\bin\$configuration$\netstandard1.0\System.Reactive.Providers.*" exclude="**\*.deps.json" target="lib\portable-net45+win8+wp8+wpa81" />
   </files>
 </package>
