--- a/Rx.NET/Integration/NetCoreApp/project.json
+++ b/Rx.NET/Integration/NetCoreApp/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
@@ -6,9 +6,10 @@
 
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0"
-    }
+        "type": "platform",
+        "version": "1.0.0"
+    },
+    "System.Reactive": "3.0.0-rc1-00354"
   },
 
   "frameworks": {
