--- a/Rx.NET/Integration/NetStandard14/project.json
+++ b/Rx.NET/Integration/NetStandard14/project.json
@@ -1,9 +1,10 @@
-﻿{
+{
   "version": "1.0.0-*",
 
-  "dependencies": {
-    "NETStandard.Library": "1.6.0"
-  },
+    "dependencies": {
+        "NETStandard.Library": "1.6.0",
+        "System.Reactive": "3.0.0-rc1-00354"
+    },
 
   "frameworks": {
     "netstandard1.4": {
