--- a/Ix.NET/Integration/NetCoreApp/project.json
+++ b/Ix.NET/Integration/NetCoreApp/project.json
@@ -9,9 +9,8 @@
             "type": "platform",
             "version": "1.0.0"
         },
-        "System.Interactive.Async.Providers": "3.0.0-rc1-00346",
-        "System.Interactive.Providers": "3.0.0-rc1-00346"
-    },
+        "System.Interactive.Async.Providers": "3.0.0-rc1-00354",
+        "System.Interactive.Providers": "3.0.0-rc1-00354"   },
 
   "frameworks": {
     "netcoreapp1.0": {
