--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -20,6 +20,9 @@
     "xmlDoc": true,
     "embed": {
       "includeFiles": "Properties/System.Reactive.Core.rd.xml"
+    },
+    "compile": {
+      "includeFiles": [ "../GlobalAssemblyVersion.cs" ]
     }
   },
 
