--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -20,6 +20,9 @@
     "xmlDoc": true,
     "embed": {
       "includeFiles": "Properties/System.Interactive.Async.Providers.rd.xml"
+    },
+    "compile": {
+      "includeFiles": [ "../GlobalAssemblyVersion.cs" ]
     }
   },
 
