--- a/Rx.NET/Source/System.Reactive.Windows.Forms/project.json
+++ b/Rx.NET/Source/System.Reactive.Windows.Forms/project.json
@@ -17,7 +17,10 @@
     "keyFile": "../ReactiveX.snk",
     "define": [ "SIGNED" ],
     "nowarn": [ "CS1591" ],
-    "xmlDoc": true
+    "xmlDoc": true,
+    "compile": {
+      "includeFiles": [ "../GlobalAssemblyVersion.cs" ]
+    }
   },
   
   "dependencies": {
