NuSpec update with dependencies

--- a/Ix.NET/Source/NuSpecs/System.Interactive.Async.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Async.nuspec
@@ -30,6 +30,17 @@
       </group>
       <group targetFramework="net45" />
       <group targetFramework="portable-net45+win8+wp8+wpa81" />
+      <group targetFramework="net46" />
+      <group targetFramework="netstandard1.3">
+        <dependency id="System.Collections" version="4.0.11" />
+        <dependency id="System.Diagnostics.Debug" version="4.0.11" />
+        <dependency id="System.Linq" version="4.1.0" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1" />
+        <dependency id="System.Runtime" version="4.1.0" />
+        <dependency id="System.Runtime.Extensions" version="4.1.0" />
+        <dependency id="System.Threading" version="4.0.11" />
+        <dependency id="System.Threading.Tasks" version="4.0.11" />
+      </group>
     </dependencies>
   </metadata>
   <files>
