--- a/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
+++ b/Rx.NET/Source/NuSpecs/System.Reactive.Providers.nuspec
@@ -15,52 +15,9 @@
     <language>en-US</language>
     <tags>Rx Reactive Extensions Observable LINQ Events</tags>
     <dependencies>
-      <group targetFramework="portable-net45+win8+wp8+wpa81">
-        <dependency id="System.Reactive" version="$version$" />
-      </group>
-      <group targetFramework="netstandard1.0">
-        <dependency id="System.Reactive" version="$version$" />
-        <dependency id="System.Collections" version="4.0.11" />
-        <dependency id="System.Diagnostics.Debug" version="4.0.11" />
-        <dependency id="System.Diagnostics.Tools" version="4.0.1" />
-        <dependency id="System.Globalization" version="4.0.11" />
-        <dependency id="System.Linq" version="4.1.0" />
-        <dependency id="System.Linq.Expressions" version="4.1.0" />
-        <dependency id="System.Linq.Queryable" version="4.0.1" />
-        <dependency id="System.Reflection" version="4.1.0" />
-        <dependency id="System.Reflection.Extensions" version="4.0.1" />
-        <dependency id="System.Resources.ResourceManager" version="4.0.1" />
-        <dependency id="System.Runtime" version="4.1.0" />
-        <dependency id="System.Threading" version="4.0.11" />
-        <dependency id="System.Threading.Tasks" version="4.0.11" />
-      </group>
-      <group targetFramework="net45">
-        <dependency id="System.Reactive" version="$version$" />
-      </group>
-      <group targetFramework="net46">
-        <dependency id="System.Reactive" version="$version$" />
-      </group>
-      <group targetFramework="netstandard1.3">
-        <dependency id="System.Reactive" version="$version$" />
-        <dependency id="System.Collections" version="4.0.11" />
-        <dependency id="System.Diagnostics.Debug" version="4.0.11" />
-        <dependency id="System.Diagnostics.Tools" version="4.0.1" />
-        <dependency id="System.Globalization" version="4.0.11" />
-        <dependency id="System.Linq" version="4.1.0" />
-        <dependency id="System.Linq.Expressions" version="4.1.0" />
-        <dependency id="System.Linq.Queryable" version="4.0.1" />
-        <dependency id="System.Reflection" version="4.1.0" />
-        <dependency id="System.Reflection.Extensions" version="4.0.1" />
-        <dependency id="System.Resources.ResourceManager" version="4.0.1" />
-        <dependency id="System.Runtime" version="4.1.0" />
-        <dependency id="System.Threading" version="4.0.11" />
-        <dependency id="System.Threading.Tasks" version="4.0.11" />
-      </group>
+      <dependency id="System.Reactive.Linq" version="$version$" />
+      <dependency id="System.Linq.Queryable" version="4.0.1" />      
     </dependencies>
-    <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System" targetFramework="net45" />
-      <frameworkAssembly assemblyName="System.Core" targetFramework="net45" />
-    </frameworkAssemblies>
   </metadata>
   <files>
     <file src="..\System.Reactive.Providers\bin\$configuration$\**\System.Reactive.Providers.*" exclude="**\*.deps.json" target="lib" />
