Add support for code coverage

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,10 @@ image: Visual Studio 2015
 init:
   - cmd: set
 
+environment:
+  COVERALLS_REPO_TOKEN:
+    secure: UHHvZf0xOadSg6wc6ITa3XqtDf3AIv31D2Bs0opREd4/Ni+1KsqcHitWDAahZhTG
+
 branches:
   only:
     - master
